# op_miroshnik_vt-232

./: CMakeLists.txt  README.md  main.c  еуче.txt
libs/data_structures/lab_16/: matrix.c  matrix.h  test.c
libs/data_structures/matrix/: matrix.c  matrix.h  test.c  test.h  test.ilk
libs/data_structures/vector/: CMakeLists.txt  test.c  test.h  test.ilk  vector.c  vector.h  vectorVoid.c  vectorVoid.h
libs/ek/: zadacha.c  zadacha.ilk
libs/files/: main_19.1.c  task.c  task_1.c  test.c
libs/lr 20/: lr20.c  lr20.h  matrix.c  matrix.h  test.c  test.ilk
libs/string/: main.c
libs/string/tasks/: main.c  main.ilk  string_.c  string_.h  string_18_.c  string_18_.h
